# console

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
.claude/commands/: add-ai-tool.md  add-api-endpoint.md  add-dashboard-card.md  add-resource.md  check.md  deploy.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/routers/: ai.py  auth.py  cluster.py  events.py  health.py  helm.py  k8s.py  monitoring.py  permissions.py  resources.py  watch.py
backend/app/services/: ai_tools.py  helm_releases.py  k8s_client.py  k8s_discovery.py  k8s_proxy.py  k8s_rbac.py  k8s_watch.py  monitoring_proxy.py  session.py
backend/tests/: test_health.py  test_helm.py
cli/: README.md  pyproject.toml
cli/kubosun_cli/: cluster.py  main.py  manifests.py
deploy/: deployment.yaml  kustomization.yaml  service.yaml
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: test-setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(console)/: layout.tsx  page.tsx
frontend/src/hooks/: useAIAgent.ts  useAccessReview.ts  useAlerts.ts  useApiGroups.ts  useClusterSummary.ts  useEvents.ts  useHelmReleases.ts  useK8sResource.ts  useK8sResourceList.ts  usePrometheusQuery.ts  useResourceMetrics.ts  useUser.ts
frontend/src/lib/k8s/: client.ts  (+4 more)
frontend/src/stores/: namespace-store.ts  preferences-store.ts
(+39 files in other folders)
