[project]
name = "kubosun-backend"
version = "0.1.0"
description = "AI-native Kubernetes console backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "kubernetes>=32.0.0",
    "anthropic>=0.52.0",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/services/ai_tools.py" = ["E501"]  # Tool descriptions are naturally long
"app/routers/ai.py" = ["E501"]  # SSE formatting lines
