[project]
name = "kubosun-cli"
version = "0.1.0"
description = "Deploy Kubosun Console to OpenShift clusters"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
kubosun = "kubosun_cli.main:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
